typescript changes works, its time to study nuxt.js more

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 // tsconfig.json
 {
   "compilerOptions": {
+      "experimentalDecorators": true,
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
