--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "JavierCollipal",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "generate": "nuxt-ts generate",
     "lint": "eslint --ext .ts,.js,.vue .",
     "test": "jest"
   },
@@ -21,7 +21,7 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.3.5",
+    "@nuxt/typescript-runtime": "^0.3.6",
     "nuxt": "^2.11.0",
     "vue-property-decorator": "^8.3.0"
   },
