--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^1.16.4",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "^4.0.0-0",
+    "vuex-module-decorators": "^0.11.0"
   }
 }
