--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "JavierCollipal",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue .",
     "test": "jest"
   },
@@ -21,13 +21,19 @@
     }
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.3.6",
+    "@nuxt/vue-app": "^2.11.0",
+    "@nuxtjs/auth": "^4.8.5",
+    "@nuxtjs/axios": "^5.9.2",
+    "@nuxtjs/vuetify": "^1.0.0",
+    "@vue/composition-api": "^0.3.4",
+    "axios": "^0.19.1",
     "nuxt": "^2.11.0",
-    "vue-property-decorator": "^8.3.0",
-    "@nuxtjs/vuetify": "^1.0.0"
+    "nuxt-property-decorator": "^2.5.0",
+    "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.5.4",
+    "@nuxt/typescript": "^2.8.1",
+    "@nuxt/typescript-build": "^0.5.5",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
@@ -36,7 +42,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "eslint": "^6.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^  4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^2.6.0",
@@ -45,7 +51,6 @@
     "prettier": "^1.16.4",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "vue-jest": "^4.0.0-0",
-    "vuex-module-decorators": "^0.11.0"
+    "vue-jest": "^4.0.0-0"
   }
 }
