--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
-
-
 // tsconfig.json
 {
   "compilerOptions": {
-      "experimentalDecorators": true,
+    "experimentalDecorators": true,
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
@@ -27,6 +25,7 @@
       ]
     },
     "types": [
+      "@nuxtjs/axios",
       "@types/node",
       "@nuxt/types"
     ]
