--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^  4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
