--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,9 @@
       ]
     },
     "types": [
-      "@nuxtjs/axios",
       "@types/node",
-      "@nuxt/types"
+      "@nuxt/types",
+      "@nuxtjs/axios"
     ]
   },
   "exclude": [
